# PCC_SEM

./: CMakeLists.txt  Configuration.cpp  Configuration.h  DragLabel.cpp  DragLabel.h  MainFrame.cpp  MainFrame.h  MainWindow.cpp  PCC_SEM.pro  SunriseSunsetChecker.cpp  SunriseSunsetChecker.h  SunsetSunrise.sh  config.txt  images.qrc  main.cpp  sunwait  utils.h
arduinoCode/: LedController.c
include/: ArduinoComunicator.h  Configuration.h  DragLabel.h  LightChanger.h  MainFrame.h  NetworkChecker.h  utils.h
src/: ArduinoComunicator.cpp  ArduinoComunicator.h  Configuration.cpp  Configuration.h  DragLabel.cpp  DragLabel.h  LedController.c  LightChanger.cpp  MainFrame.cpp  MainFrame.h  MainWindow.cpp  MainWindow.h  NetworkChecker.cpp  SerialComunicator.py  SunriseSunsetChecker.cpp  SunriseSunsetChecker.h  main.cpp
sunset_lib/src/: SunSet.cpp  SunSet.h
